--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": ">=5.5.9",
         "illuminate/database": "~5.0",
-        "illuminate/support": "~5.0"
+        "illuminate/support": "~5.0",
+        "asmiarowski/laravel-postgres": "^0.1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
