--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php": ">=5.5.9",
         "illuminate/database": "~5.0",
         "illuminate/support": "~5.0",
-        "asmiarowski/laravel-postgres": "^0.1.4"
+        "asmiarowski/laravel-postgres": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
