--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "illuminate/database": "~5.0",
-        "illuminate/support": "~5.0",
+        "php": "7.4",
+        "illuminate/database": "~6.7",
+        "illuminate/support": "~6.7",
         "asmiarowski/laravel-postgres": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "mockery/mockery": "~0.9",
+        "phpunit/phpunit": "^8.0",
+        "mockery/mockery": "^1.0",
         "graham-campbell/testbench": "^3.1"
     },
     "autoload": {
