--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": "7.4",
+        "php": "^7.3",
         "illuminate/database": "~6.7",
         "illuminate/support": "~6.7",
         "asmiarowski/laravel-postgres": "dev-master"
