--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/database": "~6.7",
-        "illuminate/support": "~6.7",
+        "illuminate/database": "^7.22",
+        "illuminate/support": "^7.22",
         "asmiarowski/laravel-postgres": "dev-master"
     },
     "require-dev": {
